# axum

./: .env  Cargo.toml  README.md
entity/: Cargo.toml
entity/src/: like.rs  mod.rs  post.rs  prelude.rs  user.rs
migration/src/: lib.rs  m20241224_172251_create_post_table.rs  m20250128_212125_create_user_table.rs  m20250128_212714_create_post_table.rs  m20250218_210543_create_like_table.rs
src/: app.rs  jwt.rs  main.rs  routes.rs  state.rs
src/config/: cors.rs  database.rs  jwt.rs  mod.rs  redis.rs  static_server.rs
src/database/: database.rs  redis.rs
src/handlers/: gemini.rs  json_handlers.rs  like.rs  mod.rs  path.rs  path_handlers.rs  post.rs  query_handlers.rs  static_handlers.rs  token.rs  user.rs  user_handlers.rs
src/middlewars/: cors.rs
src/routes/: mod.rs  post.rs  user.rs
src/services/: email.rs
src/tests/: json_handlers.rs  mod.rs  path_handlers.rs  query_handlers.rs  setup_server.rs  user_handlers.rs
