[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-test = "17.1.0"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
