[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat" # Melhor otimização no linker para desempenho e tamanho do binário
codegen-units = 1 # Define o número de geradores de código 
split-debuginfo = "unpacked" # Define o código de depuração em binário separado
debug = true
overflow-checks = true

#[workspace]
#members = [
#    "migration"
#]

[dependencies]
axum = "0.8.1"
axum-test = "17.1.0"
dotenvy = "0.15.7"
#migration = { path = "migration" }
#sea-orm = { version = "1.1.4", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.2", features = ["cors"] }
