[package]
name = "axum_back"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = "fat" # Melhor otimização no linker para desempenho e tamanho do binário
codegen-units = 1 # Define o número de geradores de código 
split-debuginfo = "unpacked" # Define o código de depuração em binário separado
debug = true
overflow-checks = true

[workspace]
members = [
    "entity",
    "migration"
]

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenvy = "0.15.7"
entity = { path = "entity" }
jsonwebtoken = "9.3.1"
migration = { path = "migration" }
reqwest = { version = "0.12.12", features = ["json"] }
sea-orm = { version = "1.1.4", features = ["sqlx-mysql", "runtime-tokio-rustls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
uuid = { version = "1.13.1", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
